Reporte de Administrador

--- a/css/estilosadministrar.css
+++ b/css/estilosadministrar.css
@@ -11,6 +11,12 @@
   background-color: #005874 !important;
 }
 
+.altmes{
+  height: 50% !important;  
+  background-color: red !important;
+  
+}
+
  
 
  
