Agregacion de Detalle de Historia Clínica del Paciente

--- a/css/estilosadministrar.css
+++ b/css/estilosadministrar.css
@@ -11,9 +11,8 @@
   background-color: #005874 !important;
 }
 
-.altmes{
-  height: 50% !important;  
-  background-color: red !important;
+.dise{
+  
   
 }
 
